deploy/k8s/deployment/grpc-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
  namespace: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: eduardobcolombo/client:1.0
        name: client
        ports:
          - name: client
            containerPort: 8888        
        resources:
          requests:
            cpu: 100m       
            memory: 64Mi
          limits:
            cpu: 100m       
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8888
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8888
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
